# ACE-Magnetometer

./: .gitignore  .travis.yml  DownloadACE.py  PlotACE.m  PlotACE.py  README.md  README.rst  datenum2DOY.m  datenum2fpYear.m  loadACEhdf.m  setup.cfg
ace_magnetometer/: __init__.py
matlab/: PlotACE.m  datenum2DOY.m  datenum2fpYear.m  loadACEhdf.m
tests/: test_mod.py
