[metadata]
name = ace_magnetometer
version = 0.9.0
author = Michael Hirsch, Ph.D.
url = https://github.com/space-physics/ace_magnetometer
description = Load and Plot ACE satellite magnetometer data
keywords =
  IMF
  magnetic field
  geospace
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6.2
include_package_data = True
packages = find:
install_requires =
  pandas
  numpy
  python-dateutil

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
plot =
  matplotlib
  seaborn
